fix(design): reduce title spacing

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -61,12 +61,12 @@
     }
 
     h1 {
-      margin: 70px 0 35px;
+      margin: 35px 0 17.5px;
       font-size: 2.2em;
       color: white;
 
       @media (max-width: $viewport-md) {
-        margin: 35px 0 17.5px;
+        margin: 17.5px 0 17.5px;
         font-size: 1.56rem;
       }
 
@@ -136,7 +136,7 @@
 
       @media (max-width: $viewport-ms) {
         margin-top: 0;
-        padding-bottom: 35px;
+        padding-bottom: 17.5px;
       }
 
       @media (max-width: $viewport-lg) {
